--- a/1 - AIoT Exploration.ipynb
+++ b/1 - AIoT Exploration.ipynb
@@ -10,7 +10,6 @@
     "import scipy.signal\n",
     "import numpy as np\n",
     "import threading\n",
-    "import pyglet\n",
     "import time\n",
     "import usb\n",
     "import sys\n",
@@ -97,7 +96,14 @@
     "        data_thread.start()\n",
     "        data_thread.join()    \n",
     "        \n",
-    "def butter_bandpass(lowcut, highcut, fs, order=5):\n",
+    "def butter_b# Capture a seconds worth of EEG Data (each update captures ~250 ms of data)\n",
+    "\n",
+    "for i in range(4):\n",
+    "    nia.update()\n",
+    "\n",
+    "plt.figure(figsize=(16,10))\n",
+    "plt.plot(nia.current_data)\n",
+    "plt.title('Raw EEG data - 1 second')andpass(lowcut, highcut, fs, order=5):\n",
     "        nyq = 0.5 * fs\n",
     "        low = lowcut / nyq\n",
     "        high = highcut / nyq\n",
@@ -509,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
