--- a/3 - Hardware Control.ipynb
+++ b/3 - Hardware Control.ipynb
@@ -219,6 +219,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set up the GPIO pins on the Jetson nano\n",
+    "GPIO.setmode(GPIO.BOARD)\n",
+    "GPIO.setup([11, 12], GPIO.OUT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Finally, run the Classifier, and control those LEDs!!!\n",
     "while True:\n",
     "    autoencoder_output = process_eeg_data().cpu().numpy()\n",
